refactor: Refactored to a new flow, API keys are now able to be provided at runtime through the UI and are validated before use, onboarding is now done via free text field instead of individual controlled fields.